[build-system] 
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "thorlabs"
version = "0.1.0"
description = "A collection of Python interfaces for communicating with HISPEC FEI components, including Filter Wheel and Gimbal Mount Control."
authors = [
    { name = "Elijah Anakalea-Buckley", email = "elijahab@caltech.edu" }
]
maintainers = [
    { name = "Elijah Anakalea-Buckley", email = "elijahab@caltech.edu" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pyserial"
]

[project.urls]
Repository = "https://github.com/COO-Utils/thorlabs"

[project.optional-dependencies]
dev = [
    "pytest-mock",
    "pytest", 
    "black",
    "flake8"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ppc102", "fw102c"]

